# gwr

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
gwr/: __init__.py  gwr.py
test/: test_gwr.py
