[tool.poetry]
name = "gwr"
version = "0.1.0"
description = "Implementation of the Grow When Required model"
authors = ["yurytsoy <yurytsoy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.16"
jsonpickle = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
